2007-04-02  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_check_missing_plugins_error):
	  Make the missing-plugins stuff work in the case where we have
	  a subtitles streams but no video stream (presumably because we are
	  missing the appropriate video decoder). This should probably be
	  handled better in playbin itself, but for now we'll work around it.
	  (Closes: #418383)

2007-04-02  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-missing-plugins.c:
	(on_plugin_installation_done):
	  Also add the missing plugins to the local blacklist if the user
	  aborts the installer, so we either just play what we can or show
	  an error message (presumably the user doesn't want to see the
	  installer, so let's honour that wish).

2007-04-02  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Remove the rejection
	of streams based on mime-type, too many false positives
	(Closes: #418387)

2007-03-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-missing-plugins.c: (on_plugin_installation_done):
	  Make sure an error dialog gets shown if the installer returns a
	  not-found exit code (Closes: #424520)

2007-03-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_callback_connect): Make the seek back/forth
	and skipto menu items unsensitive on startup (Closes: #370021)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_setup_recent): Patch from Philip Withnall
	<bugzilla@tecnocode.co.uk> to grab the recent files manager from
	the right screen (Closes: #395195)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* data/uri.glade: patch from Emil Soleyman-Zomalan <emil@soleyman.com>
	to make the Open Location dismiss when pressing enter (Closes: #394215)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_open_location): Fix leak when
	stream is already in the recent files, spotted by Christian